@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{574, 82}, {1126, 1082}}</string>
+	<string>{{514, 83}, {1126, 1082}}</string>
 </dict>
 </plist>
