@@ -41,7 +41,7 @@ class ServerDialog < OSX::NSObject
   end
   
   def show
-    @window.moveToCenterOf(@parent) unless @window.isVisible
+    @window.centerOfWindow(@parent) unless @window.isVisible
     @window.makeKeyAndOrderFront(self)
   end
   
