@@ -1,5 +1,10 @@
 2007-07-22  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to ensure server dialogs and channel dialogs are in visibleRect of the screen.
+	Added utility functions to NSRect, NSSize and NSPoint.
+
+2007-07-22  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to place server dialogs and channel dialogs in center of the main window.
 
 2007-07-22  Satoshi Nakagawa <artension@gmail.com>
